# astlab

./: README.md  pyproject.toml
src/astlab/: __init__.py  _typing.py  abc.py  builder.py  cache.py  context.py  info.py  predef.py  reader.py  resolver.py  traverse.py  types.py  version.py  writer.py
src/astlab/types/: __init__.py  annotator.py  inspector.py  loader.py  model.py  predef.py
tests/: conftest.py  marks.py
tests/stub/: types.py
tests/unit/: case_builder.py  case_types.py  test_builder.py  test_info.py  test_types.py
